--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon index.js -e js,json,env"
+    "dev": "env-cmd -f ./config/dev.env nodemon index.js -e js,json,env",
+    "atlas": "env-cmd -f ./config/prod.env nodemon index.js -e js,json,env"
   },
   "keywords": [],
   "author": "",
