--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-# Git directory for heroku deployment 
-server/.git/
-
-# Visual studio code project settings
-/.vscode
-
-# Misc
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
 .DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
